<resources>
    <!--Main screen strings-->
    <string name="app_name">Shelf Help</string>
    <string name="shelf_empty_state_string_title">Your shelf is a bit empty &#8230;</string>
    <string name="shelf_empty_state_string_subtitle">Get started by adding a book</string>
    <string name="easter_egg_text">Not all leaders are readers, but all readers are leaders." -Harry S. Truman

				Thank you for being a leader :)!</string>

    <!--Detail screen strings-->
    <string name="author"><b>Author(s): </b></string>
    <string name="publisher"><b>Publisher: </b></string>
    <string name="description">Description</string>
    <string name="published_date"><b>Published on: </b></string>
    <string name="delete_book">Delete Book</string>
    <string name="about_the_book">About the book</string>
    <string name="share_book_subject">Check out this book!</string>
    <string name="share_book_text">I\'ve really been enjoying %1$s by %2$s , I\'d highly recommend it! </string>
    <string name="mark_as_currently_reading">Mark as currently reading</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="select_shelf">Select Shelf</string>
    <string name="add_book">Add Book</string>
    <string name="cancel">Cancel</string>

    <!--Search screen strings-->
    <string name="by">By </string>
    <string name="search_active_string_title">Search Shelf Help</string>
    <string name="search_active_state_string_subtitle">Find books by author, title, or ISBN</string>
    <string name="search_offline_title_text">You\'re offline</string>
    <string name="search_offline_subtitle_text">Please connect to the internet and try again</string>
    <string name="search_no_results_title_text">Your search returned no results</string>
    <string name="search_hint">Search</string>

    <!--Settings screen strings-->
    <string name="stats">Stats</string>
    <string name="show_stats">Coming soon ;)</string>

    <!--Nav Drawer strings-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send feedback</string>
    <string name="search">Search</string>
    <string name="nav_drawer_title">2017 Shelf Help</string>
    <string name="send_feedback_text"> I\'d tell all my friends about this app if it had&#8230;</string>
    <string name="send_feedback_subject"> Android Shelf Help, feedback</string>

    <!--Shared -->
    <string name="currently_reading">Currently Reading</string>
    <string name="books_to_read">Books To Read</string>
    <string name="books_read">Books Read</string>
    <string name="search_device_is_offline_title">Device is offline</string>
    <string name="search_device_is_offline_subtitle">Make sure Wi-fi or cellular data is turned on.</string>
    <string name="error_connecting_to_server">Error connecting to server.</string>
</resources>
