<?xml version="1.0" encoding="utf-8"?>
<!--TODO: CLEAN THIS SHIT UP, HEAVILY NESTED-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.bookdetailsscreen.BookDetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="@dimen/spacing_none">

                <include
                    layout="@layout/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </android.support.design.widget.AppBarLayout>

            <RelativeLayout
                android:id="@+id/main_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:paddingTop="@dimen/spacing_normal">

                <ImageView
                    android:id="@+id/cover"
                    android:layout_width="@dimen/width_book_cover_image"
                    android:layout_height="@dimen/height_book_cover_image"
                    android:layout_marginBottom="@dimen/spacing_normal"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:background="#424242"
                    android:contentDescription="@null"
                    android:scaleType="fitXY"/>

                <TextView
                    android:id="@+id/book_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginRight="@dimen/spacing_normal"
                    android:layout_toEndOf="@+id/cover"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="3"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/font_medium"
                    android:textStyle="bold"
                    tools:hint="Book title"/>

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/book_title"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginRight="@dimen/spacing_normal"
                    android:layout_toEndOf="@+id/cover"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/font_small"
                    tools:hint="Subtitle"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/about_book_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:text="@string/about_the_book"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/font_small"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/publisher"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/font_small"/>

                <TextView
                    android:id="@+id/publishedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/published_date"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/font_small"/>

                <TextView
                    android:id="@+id/author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/author"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/font_small"/>

                <TextView
                    android:id="@+id/description_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:layout_marginTop="@dimen/spacing_normal"
                    tools:text="@string/description"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/font_small"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/font_small"/>

            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            app:elevation="@dimen/elevation_fab"
            app:layout_anchor="@id/main_container"
            app:layout_anchorGravity="bottom|right|end"/>
    </android.support.design.widget.CoordinatorLayout>
</ScrollView>
