<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/books_to_read_fragment"
            android:icon="@drawable/ic_logo"
            android:title="@string/books_to_read"/>

        <item
            android:id="@+id/books_currently_reading_fragment"
            android:icon="@drawable/ic_logo"
            android:title="@string/currently_reading"/>

        <item
            android:id="@+id/books_read_fragment"
            android:icon="@drawable/ic_logo"
            android:title="@string/books_read"/>

        <item
            android:id="@+id/search_activity"
            android:checkable="false"
            android:icon="@drawable/ic_action_search"
            android:title="@string/search"/>
    </group>

    <group
        android:id="@+id/settings_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings_activity"
            android:checkable="false"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/action_send_feedback"
            android:checkable="false"
            android:icon="@drawable/ic_feedback"
            android:title="@string/send_feedback"/>
    </group>
</menu>