...
            android:layout_centerInParent="true"
            android:contentDescription="@null"
            android:visibility="invisible"
            android:src="@drawable/ic_empty_search_image"/>

        <TextView
            android:id="@+id/search_title_text"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_icon"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
...
